# blockprotocol

crates/dsl/: Cargo.toml
crates/dsl/codegen/: Cargo.toml  types.toml
crates/dsl/codegen/src/: config.rs  hash.rs  lexer.rs  main.rs  parser.rs  syntax.rs  util.rs  utils.rs
crates/dsl/lexer/: Cargo.toml  types.toml
crates/dsl/lexer/src/: kind.rs  lib.rs  token.rs
crates/dsl/lexer/src/snapshots/: lexer__tests__+.snap  lexer__tests__-.snap  lexer__tests___.snap  lexer__tests__comment.snap  lexer__tests__double_quoted.snap  lexer__tests__escaped double_quoted.snap  lexer__tests__escaped single_quoted.snap  lexer__tests__ident.snap  lexer__tests__ident_.snap  lexer__tests__ident_ident.snap  lexer__tests__integer.snap  (+7 more)
crates/dsl/parser/: Cargo.toml
crates/dsl/parser/src/: error.rs  event.rs  input.rs  kind.rs  lexed_str.rs  lib.rs  marker.rs  output.rs  parser.rs  token_set.rs
crates/dsl/parser/src/grammar/: attributes.rs  items.rs  mod.rs  paths.rs  reference.rs
crates/dsl/parser/src/grammar/expressions/: atom.rs  mod.rs  postfix.rs  pratt.rs  reference.rs
crates/dsl/parser/src/grammar/types/: mod.rs
crates/dsl/parser/tests/data/items/pass/: 0001_prop_minimal.bpcl  0002_prop_minimal_semicolon.bpcl  0003_prop.bpcl  0004_prop_default.bpcl  0005_entity.bpcl  0006_entity_semicolon.bpcl  0007_entity_default.bpcl
crates/dsl/syntax/: Cargo.toml
crates/dsl/syntax/src/: error.rs  kind.rs  lib.rs  parse.rs  tree.rs
crates/type-system/: Cargo.toml
site/: next.config.js  package.json
site/src/_pages/docs/: 3_embedding-blocks.mdx
site/src/lib/: api-client.ts
site/tests/integration/: cookie.test.ts
(+9 files in other folders)
