[package]
name = "codegen"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.21"
ring = "0.17.0-alpha.11"
error-stack = { git = "https://github.com/hashintel/hash.git" }

serde = { version = "1.0.144", features = ['derive'] }
toml = "0.5.9"
indexmap = { version = "1.9.1", features = ['serde'] }