[package]
name = "parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = { git = "https://github.com/hashintel/hash.git" }

num-derive = "0.3.3"
num-traits = "0.2.15"

lexer = {path = "../lexer"}