[package]
name = "parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-size = "1.1.0"

error-stack = { git = "https://github.com/hashintel/hash.git" }

num-traits = "0.2.15"
num-derive = "0.3.3"

lexer = {path = "../lexer"}