[package]
name = "syntax"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = { git = "https://github.com/hashintel/hash.git" }

num-traits = "0.2.15"

rowan = "0.15.8"

lexer = { path = "../lexer" }
parser = {path = "../parser"}